switch to neovim from vim. updates to Brewfile.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # switch panes using Alt-arrow without prefix
 bind l select-pane -L
