--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,7 @@ bind j select-pane -D
 set -g mouse on
 set-option -g allow-rename off
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
