move to ansible and debian workstation

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,26 +1,20 @@
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-# Enable mouse control (clickable windows, panes, resizable panes)
+new-session
 set -g mouse on
-set-option -g allow-rename off
+set -g history-limit 30000
+set -g status-right '%a %h-%d %H:%M '
+
+# enable vi-like copy/paste
+set-window-option -g mode-keys vi
 
 # List of plugins
-
-set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @onedark_widgets "#(date +%s)"
-set -g @onedark_time_format "%I:%M %p"
-set -g @onedark_date_format "%D"
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+# Set plugin path
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.local/share/tmux-plugins'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.local/share/tpm/tpm'
