--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -16,6 +16,12 @@
     - role: python
       tags:
         - python
+    - role: ruby
+      tags:
+        - ruby
+    - role: node
+      tags:
+        - node
     - role: zsh
       tags:
         - zsh
