feat: setup go lang and redis

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -4,12 +4,12 @@
   become_user: root
   become_method: sudo
 
-# - name: Link global gitignore file
-#   file:
-#     src: "{{ dotfiles_home }}/roles/git/files/gitignore_global.link"
-#     dest: "{{ dotfiles_user_home }}/.gitignore_global"
-#     state: link
-#     force: yes
+- name: Link global gitignore file
+  file:
+    src: "{{ dotfiles_home }}/roles/git/files/gitignore_global.link"
+    dest: "{{ dotfiles_user_home }}/.gitignore_global"
+    state: link
+    force: yes
 
 - name: Check if gitconfig exists
   stat: path="{{dotfiles_user_home}}/.gitconfig"
