--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -65,6 +65,17 @@ bind + select-layout main-horizontal
 
 set-option -g mouse on
 
+# Copy-Paste
+############
+
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Navigate panes
+
+################
 # Navigate panes
 ################
 
