--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -16,12 +16,18 @@
     - role: python
       tags:
         - python
+    - role: golang
+      tags:
+        - golang
     - role: ruby
       tags:
         - ruby
     - role: node
       tags:
         - node
+    - role: redis
+      tags:
+        - redis
     - role: zsh
       tags:
         - zsh
