swich to oh-my-zsh instead of zpresto

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -31,6 +31,9 @@
     - role: zsh
       tags:
         - zsh
+    - role: fzf
+      tags:
+        - fzf
     - role: vim
       tags:
         - vim
