fix: asdf install when first run because zshell not setup yet.

--- a/roles/apt/defaults/main.yml
+++ b/roles/apt/defaults/main.yml
@@ -24,6 +24,7 @@ packages:
   - wget
   - xz-utils
   - zlib1g-dev
+  - ripgrep
 
   # GUI
   - chromium-browser
@@ -31,3 +32,6 @@ packages:
   - gnome-icon-theme
   - gnome-keyring
   - i3lock
+
+remove_packages:
+  - gnome-shell-extension-ubuntu-dock
