--- a/roles/golang/tasks/main.yml
+++ b/roles/golang/tasks/main.yml
@@ -6,12 +6,12 @@
   become_user: root
 
 - name: Add golang plugin to asdf
-  command: "asdf plugin-add golang"
+  command: "${HOME}/.asdf/bin/asdf plugin-add golang"
   register: golang_add
   failed_when: golang_add == 2
 
 - name: Install golang {{go_version}} with asdf
-  command: asdf install golang {{go_version}}
+  command: "${HOME}/.asdf/bin/asdf install golang {{go_version}}"
 
 - name: Set global version for golang to {{go_version}}
-  command: "asdf global golang {{go_version}}"
+  command: "${HOME}/.asdf/bin/asdf global golang {{go_version}}"
