feat: dot-bootstrap supports running defined tags and terraform role included

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -28,6 +28,9 @@
     - role: python
       tags:
         - python
+    - role: terraform
+      tags:
+        - terraform
     - role: golang
       tags:
         - golang
