Initial cleanup of packages

--- a/roles/apt/defaults/main.yml
+++ b/roles/apt/defaults/main.yml
@@ -8,30 +8,14 @@ packages:
   - fzf
   - htop
   - jq
-  - libbz2-dev
-  - libffi-dev
-  - libffi-dev
-  - liblzma-dev
-  - liblzma-dev
-  - libncurses5-dev
-  - libreadline-dev
-  - libsqlite3-dev
-  - libssl-dev
-  - llvm
   - make
-  - python-openssl
-  - tk-dev
   - wget
-  - xz-utils
-  - zlib1g-dev
-  - ripgrep
+  - zip
+  - vim
+  - xclip
 
   # GUI
   - chromium-browser
-  - gnome-boxes
-  - gnome-icon-theme
-  - gnome-keyring
-  - i3lock
 
 remove_packages:
   - gnome-shell-extension-ubuntu-dock
