--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -28,6 +28,9 @@
     dest: "{{dotfiles_user_home}}/.zshrc"
     state: link
 
+- name: Powerlevel9k theme installation
+  raw: "git clone https://github.com/romkatv/powerlevel10k.git  ~/.oh-my-zsh/custom/themes/powerlevel10k"
+
 - name: Set zsh as the default shell
   command: "chsh -s \"$(which zsh)\""
   become: yes
