--- a/roles/tools/tasks/main.yml
+++ b/roles/tools/tasks/main.yml
@@ -72,3 +72,6 @@
     src: "{{ dotfiles_home }}/roles/tools/files/vimrc"
     dest: "{{ dotfiles_user_home }}/.vimrc"
     state: link
+
+- name: Poetry installation
+  command: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
