--- a/roles/tools/files/settings.json
+++ b/roles/tools/files/settings.json
@@ -1,4 +1,5 @@
 {
     "keyboard.dispatch": "keyCode",
-    "window.zoomLevel": 2
+    "window.zoomLevel": 2,
+    "files.autoSave": "afterDelay"
 }
