Fix snap packages installation

--- a/roles/snap/tasks/main.yml
+++ b/roles/snap/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: Install snap packages
-  snap:
+  community.general.snap:
     name: "{{ item }}"
     classic: yes
   become: yes
   become_user: root
   become_method: sudo
-  loop: "{{ snaps }}"
+  loop: "{{ snap }}"
