Add Regolith as the desktop environment

--- a/roles/apt/defaults/main.yml
+++ b/roles/apt/defaults/main.yml
@@ -16,6 +16,7 @@ packages:
 
   # GUI
   - chromium-browser
+  - regolith-desktop-complete
 
 remove_packages:
   - gnome-shell-extension-ubuntu-dock
