--- a/roles/apt/files/config
+++ b/roles/apt/files/config
@@ -28,12 +28,13 @@ assign [class="Code"] → "5: 5 Code"
 # Move workspaces to specific screens
 
 # Screens
+# Use xrandr --verbose to get screen id's
 # eDp # Laptop screen
-# DP-1-2-8 # Primary screen
-# DP-1-1
+# DP-1-1-8 # Primary screen
+# DP-1-1-1
 
-workspace "1: 1 Other" output DP-1-1
-workspace "2: 2 Notion" output DP-1-2-8
-workspace "3: 3 Terminal" output DP-1-1
-workspace "4: 4 Browser" output DP-1-1
-workspace "5: 5 Code"  output DP-1-2-8
+workspace "1: 1 Other" output DP-1-1-1
+workspace "2: 2 Notion" output DP-1-1-8
+workspace "3: 3 Terminal" output DP-1-1-1
+workspace "4: 4 Browser" output DP-1-1-1
+workspace "5: 5 Code"  output DP-1-1-8
