--- a/roles/apt/files/config
+++ b/roles/apt/files/config
@@ -24,7 +24,7 @@ exec --no-startup-id i3-msg 'exec code'
 # DP-1-1-8 # Primary screen
 # DP-1-1-1
 
-workspace "1: 1 Other" output DP-1-1-1
+workspace "1: 1 Misc" output DP-1-1-1
 workspace "2: 2 Notion" output DP-1-1-8
 workspace "3: 3 Terminal" output DP-1-1-1
 workspace "4: 4 Browser" output DP-1-1-1
