--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -10,6 +10,9 @@
 - apt_repository:
     repo: ppa:regolith-linux/release
     state: present
+  become: yes
+  become_user: root
+  become_method: sudo
 
 - name: Install apt packages
   apt:
@@ -69,3 +72,4 @@
   file:
     src: "/usr/bin/fdfind"
     dest: "{{ dotfiles_user_home }}/.local/bin/fd"
+    state: link
